# msms-spectra-dataset

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark.py
msms_spectra_dataset/: __init__.py  dataset.py  duckdb_dataset.py  duckdb_hdf5_dataset.py  in_memory_dataset.py  on_demand_dataset.py  utils.py
tests/: test_dataset.py  test_duckdb_dataset.py  test_duckdb_hdf5_dataset.py  test_in_memory_dataset.py  test_on_demand_dataset.py
